# drift

./: .gitignore  README.md  STORIES.md  TODO.md  conf.yml  const.yml  pyproject.toml  pytest_with_pycov.sh  run.sh  worlds.yml
.github/workflows/: run_tests.yml
old_stuff/: biomes.yml  pop_effects.py
old_stuff/old_effects/: pop_effects.py  util.py
old_stuff/worlds/: rats_and_lynxes.yml  sparse_nomads.yml  steppe_breath.yml  wheat_and_trade.yml
res/: WARNING  const.yml
res/assets/: icons.yml  images.yml  map_filters.yml  palette.yml
res/entities/: biomes.yml  pops.yml  resources.yml  structures.yml
res/maps/: map.csv  middle_kingdom.csv
res/worlds/: basic_growth_and_migration.yml  farmers_and_herders.yml  middle_kingdom.yml  rats_and_lynxes.yml  sparse_nomads.yml  steppe_breath.yml  surplus_and_craft.yml  wheat_and_trade.yml
src/: __main__.py  conf.py  logger.py  main.py  storage.py  util.py
src/data/: __init__.py  agents.py  base_types.py  buffers.py  cell.py  cells.py  control.py  effects.py  grid.py  grids.py  histories.py  history.py  models.py
src/gui/: assets.py  controller.py  main.kv  main.py  map_filter.py  widgets.py
src/io/: __init__.py  load_factory.py  load_worlds.py  models.py  output.py  storage.py
src/logic/: buffers.py  computation.py  models.py  util.py
tests/: conftest.py
tests/data/: test_agents.py  test_cell.py  test_encyclopedia.py  test_grid.py
tests/io/: conftest.py  test_model.py  test_storage.py
tests/logic/: conf.yml  conftest.py  test_agents.py  test_cell.py  test_encyclopedia.py  test_grid.py  test_history.py
(+103 files in other folders)
