[tool.poetry]
name = "drift"
version = "0.1.0"
description = "Modelling population dynamics"
authors = ["rattus-aristarchus <lankin.m.a@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
kivy = "^2.3.0"
pyyaml = "^6.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
